Bug 181794 - Flat ungrouped views should not have the "tree child" indicator
Summary: Flat ungrouped views should not have the "tree child" indicator
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: 1.11.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-24 19:41 UTC by Albert Astals Cid
Modified: 2009-09-15 09:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2009-01-24 19:41:59 UTC
Version:           1.11.0 (using 4.1.96 (KDE 4.1.96 (KDE 4.2 RC1)), Kubuntu packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.27-9-generic

If you select for example Classic View -> Flat Date view you still see the "tree child" indicator in the message list when it makes no sense as you'll never have a tree there and you lose screen space due to it
Comment 1 Jaime Torres 2009-02-01 22:00:38 UTC
Confirmed in 4.2.0
Comment 2 Martin Koller 2009-08-28 21:44:17 UTC
SVN commit 1016754 by mkoller:

BUG: 181794

if the aggregation is defined without grouping only show the root decoration when
threading is enabled


 M  +2 -1      model.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1016754
Comment 3 Volker Krause 2009-09-15 09:44:46 UTC
SVN commit 1023667 by vkrause:

Merge SVN commit 1016754 by mkoller from trunk:

CCBUG: 181794

if the aggregation is defined without grouping only show the root decoration when
threading is enabled


 M  +2 -1      model.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1023667