BUG: 181794

if the aggregation is defined without grouping only show the root decoration when
threading is enabled

svn path=/trunk/KDE/kdepim/; revision=1016754